[workspace]
members = [
    "light-client",
    "overlay",
    "mocks",
]

[workspace.dependencies]
async-trait = "0.1.87"
anyhow = "1.0.97"
tokio = { version = "1.44", features = ["full", "tracing"] }
quinn = "0.11.5"
overlay = { path = "./overlay" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bincode = "1.3.3"
qp2p = { path="../qp2p" }
bytes = { version = "1.0.1", features = ["serde"] }
mocks = { path = "./mocks", default-features = false }
hex = "0.4.3"
sha2 = "0.10.8"
secp256k1 = { version = "0.30.0", features = ["rand"] }
thiserror = "2.0.12"
rand = "0.9.0"
diffie-hellman-secp = { git="https://github.com/heytdep/rs-modular-dstack", rev="993222b"}
aes-gcm = "0.10.3"
tracing = "0.1.41"
tracing-subscriber = "0.3"
metrics = "0.22"
helios = {git = "https://github.com/a16z/helios"}
warp = "0.3.7"
tdx-attestation = {git="https://github.com/heytdep/rs-modular-dstack", rev="993222b"}

