[package]
name = "new-york-light"
version = "0.1.0"
edition = "2021"

[dependencies]
dstack-core = {workspace=true}
surpluser = {workspace=true}
anyhow = {workspace=true}
hex = {workspace=true}
async-trait = {workspace=true}
serde_json = {workspace=true}
sha2 = {workspace=true}
serde = {workspace=true}
reqwest = {workspace=true}
base64 = {workspace=true}
aes-gcm = {workspace=true}
x25519-dalek = {workspace=true}
secp256k1 = {workspace=true}
stellar-strkey = "0.0.8"
ed25519-dalek = "2.1.1"
stellar-xdr = { version = "=22.0.0-rc.1.1", default-features = false, features = [
    "curr",
    "serde",
    "base64",
] }
urlencoding = "2.1.3"
blake2 = "0.10.6"
tokio = {version="1", features=["full"]}
warp = "0.3.7"
dcap-qvl = "0.1.6"

# Helper objects
tdx-attestation = {workspace=true}
diffie-hellman = {workspace=true}
